hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/splice_err4.php.exp
File "splice_err4.php", line 13, characters 23-27:
Typing error (Typing[4110])
  File "splice_err4.php", line 13, characters 23-27:
  Expected `Spliceable<_, _, _>` because this is being spliced into another Expression Tree
  File "splice_err4.php", line 9, characters 10-10:
  But got `int`
File "splice_err4.php", line 13, characters 25-26:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 200, characters 5-47:
  Expected `Spliceable<ExampleDsl, mixed, _>`
  File "splice_err4.php", line 9, characters 10-10:
  But got `int`
